@@ -16,6 +16,7 @@ General:
     Locale: en_US
     AprilFoolsEvent: true
     MOTD_Enabled: true
+    EventBroadcasts: true
     # Send a message to the player when his profile was successfully loaded
     Show_Profile_Loaded: false
     # Amount of time (in minutes) to wait between saves of player information
