@@ -1,7 +1,9 @@
 Version 2.1.61
     Fixed the locale string formatting of 'Mining.SubSkill.DoubleDrops.Stat'
     Updated the Japanese locale (thanks snake0053)
+    Added toggle to turn off event message broadcasts (XP rate) to config.yml - 'General.EventBroadcasts'
 
+    NOTE: The toggle for event message broadcasts is separate from the titles being shown, that's another config option (titles are the BIG TEXT in the middle of the screen)
 
 Version 2.1.60
     Fixed a NPE error if a LivingEntity's target was set to null
